# Shiba-Music-Desktop

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  DISCORD-SETUP.md  LICENSE  MEDIA_CONTROLS.md  README.md  README.pt-BR.md  RELEASE.md  appicon.rc  apply_remaining_optimizations.cpp  bump-version.ps1
.github/workflows/: DISCORD-SETUP.md  README.md  SECRETS-SETUP.md  TOKEN-SETUP.md  TROUBLESHOOTING.md  WORKFLOW-DIAGRAM.md  build-release.yml  release.yml  version-bump.yml
doc/: CACHE_SYSTEM.md  DISCORD-SETUP.md  EXAMPLE-TRANSLATION.md  I18N-README.md  LANGUAGE-SETUP.md  SECRETS-SETUP.md  TOKEN-SETUP.md  TRANSLATION-GUIDE.md  TROUBLESHOOTING.md  UPDATER-INTEGRATION.md  WORKFLOW-DIAGRAM.md
i18n/: README.md  shibamusic_en.qm  shibamusic_en.ts  shibamusic_pt.qm  shibamusic_pt.ts
libs/discord_game_sdk/cpp/: discord_compat.h  ffi.h  types.h
qml/: main.qml
qml/components/: AlbumCard.qml  ArtistCard.qml  ColoredIcon.qml  EmptyState.qml  LanguageSelector.qml  NowPlayingBar.qml  NowPlayingPanel.qml  QueueDrawer.qml  ScrollBar.qml  ScrollConfig.qml  SectionHeader.qml  ThemePalette.qml  TrackRow.qml  UpdateDialog.qml  qmldir
qml/js/: utils.js
qml/pages/: AlbumPage.qml  AlbumsPage.qml  ArtistPage.qml  ArtistsPage.qml  CacheSettingsPage.qml  FavoritesPage.qml  HomePage.qml  LoginPage.qml  PlaylistDetailPage.qml  PlaylistsPage.qml  QueuePage.qml  SettingsPage.qml
src/: config.h.in  main.cpp
src/core/: AppInfo.h  CacheManager.cpp  CacheManager.h  StringPool.h  SubsonicClient.cpp  SubsonicClient.h  SubsonicNetworkAccessManagerFactory.cpp  SubsonicNetworkAccessManagerFactory.h  ThemeManager.cpp  ThemeManager.h  WindowStateManager.cpp  WindowStateManager.h
src/discord/: DiscordRPC.cpp  DiscordRPC.h
src/i18n/: TranslationManager.cpp  TranslationManager.h
src/playback/: MediaControls.cpp  MediaControls.h  MpvPlayer.cpp  MpvPlayer.h  PlayerController.cpp  PlayerController.h  WindowsThumbnailToolbar.cpp  WindowsThumbnailToolbar.h
src/updater/: UpdateChecker.cpp  UpdateChecker.h
themes/: material.qss
updater/: CMakeLists.txt  README.md  main.cpp
